Function dengan Return Value

--- a/belajarpython.ipynb
+++ b/belajarpython.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "mgiAbsTifVCk"
       ],
-      "authorship_tag": "ABX9TyPKQ+1yMbwDkeHLZgfkwyfy",
+      "authorship_tag": "ABX9TyNUHYxeV5SGonfAnYzKB7ER",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1907,7 +1907,7 @@
         "id": "h_kwignVOASP",
         "outputId": "aab9d525-8c57-4984-85e8-1f59232b44ed"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2007,7 +2007,7 @@
         "id": "CFlH-rc0Acsm",
         "outputId": "43abe285-12f6-4bcd-e243-b14191b82afe"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2078,7 +2078,7 @@
         "id": "azFHb0B4B8Yl",
         "outputId": "f9bdf7b0-76f7-4ea4-bc49-d8334cab1499"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2140,7 +2140,7 @@
         "id": "NC288f6TaPyF",
         "outputId": "567aa249-6f93-44e2-ff3d-c4cf5203b8fa"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2200,7 +2200,7 @@
         "id": "93HcKG4ca2aU",
         "outputId": "c6c49d51-8aa4-4ec1-d86d-bfef7eb2c497"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2261,7 +2261,7 @@
         "id": "Kmm4ZXmLcPXd",
         "outputId": "6c722dc1-0377-498d-f62c-8dc5352abf18"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2287,11 +2287,162 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [],
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "#tanpa return\n",
+        "def hitung_luas_lingkaran(radius):\n",
+        "  pi = 3.14159\n",
+        "  luas = pi * radius * radius\n",
+        "  print(\"luas lingkaran radius\",luas)\n",
+        "\n",
+        "hitung_luas_lingkaran(5)\n",
+        "\n",
+        "\n",
+        "# Dengan Return\n",
+        "def hitung_luas_lingkaran(radius):\n",
+        "  pi = 3.14159\n",
+        "  luas = pi * radius * radius\n",
+        "  return luas\n",
+        "luas1 = hitung_luas_lingkaran(5) # bisa modif\n",
+        "luas2 = hitung_luas_lingkaran(10) # bisa modif\n",
+        "\n",
+        "print(\"luas lingkaran radius 5 :\", luas1)\n",
+        "print(\"luas lingkaran radius 10 :\", luas2)\n",
+        "print(\"luas lingkaran radius 10 :\", luas2*2)# bisa modif\n",
+        "print(\"Total luas :\", luas1+luas1)# bisa modif\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "FbW-p9NueklH"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P_kQJUrGg6J3",
+        "outputId": "2142304f-9604-4cf9-f884-f1e688a5f624"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "luas lingkaran radius 78.53975\n",
+            "luas lingkaran radius 5 : 78.53975\n",
+            "luas lingkaran radius 10 : 314.159\n",
+            "luas lingkaran radius 10 : 628.318\n",
+            "Total luas : 157.0795\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Default parameter\n"
+      ],
+      "metadata": {
+        "id": "3gInS2JXt2Mz"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Saat kita menambahkan parameter di function, mka kita wajib mengisi nilai para parameter tersebut ketika memanggil functionnya\n",
+        "- namun, kita jiga bisa menmbahkan default parameter, yaitu nilai aawal untuk parameter tersebut\n",
+        "- Hal ini menjadikan jika kita tidak mengisi nilai para parameter tersebut, maka parameter tersebut akan menggunakan nilai awal\n",
+        "- posisi defaul parameter, tidak boleh di depan parameter biasa harus ada di belakang parameter biasa\n",
+        "- Untuk membuat defail parameter, cukup tambahka =(sama dengan) diikuti dengan nilai awalnya"
+      ],
+      "metadata": {
+        "id": "du_R3NgTuF6K"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sapa(nama, sapaan=\"Hallo\"): # defaultnya = Hallo\n",
+        "  print(sapaan, nama)\n",
+        "\n",
+        "sapa(\"ali\") # meggunakan default \"Hallo\" diatas\n",
+        "sapa(\"Bob\", \"Hai\") # tidak menggunakan default\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AyYLRkmcvdwn",
+        "outputId": "e082d4c9-77e0-4c7f-84e3-43dcc86461db"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hallo ali\n",
+            "Hai Bob\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Keyword Argument\n",
+        "- Argument adalah nilai yang kta kirim ke parameter function ketika kita memanggil function\n",
+        "- Saat memanggil function, posisi argument harus sama dengan posisi parameter di function\n",
+        "- Namun, jika kita ingin mengubah posisi argument, sehingga posisi tidak harus sama dengan pasisi parameter, maka kita harus menyebuatkan nama parameternya saat memanggil function\n",
+        "- fitur ini disebut keyword argument\n",
+        "- Saat mengguanakan keyword argument, kita juga bisa mengkombinasikan argument biasa"
+      ],
+      "metadata": {
+        "id": "eMWgQLlhwCBc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def perkenalan(nama, umur, kota):\n",
+        "  print(\"Nama: \",nama)\n",
+        "  print(\"Umur: \",umur)\n",
+        "  print(\"Kota: \",kota)\n",
+        "  print(\"===============\")\n",
+        "\n",
+        "# Argument biasa (urutan harus sesuai)\n",
+        "perkenalan(\"Alice\", 25, \"Bandung\")\n",
+        "\n",
+        "# Keyword argument (urutan bebas)\n",
+        "perkenalan(kota=\"Bandung\", nama=\"bob\", umur=\"22\")\n",
+        "perkenalan(umur=21, kota=\"cianjur\", nama=\"gata\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "evrgiK2hxmI-",
+        "outputId": "7bb36071-49ae-4abb-ca5f-e8024e74e03d"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nama:  Alice\n",
+            "Umur:  25\n",
+            "Kota:  Bandung\n",
+            "===============\n",
+            "Nama:  bob\n",
+            "Umur:  22\n",
+            "Kota:  Bandung\n",
+            "===============\n",
+            "Nama:  gata\n",
+            "Umur:  21\n",
+            "Kota:  cianjur\n",
+            "===============\n"
+          ]
+        }
+      ]
     }
   ]
 }
