Note: jenis jenis tanda kurung

--- a/belajarpython.ipynb
+++ b/belajarpython.ipynb
@@ -8,7 +8,7 @@
         "mgiAbsTifVCk"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNozEq4DJpte/sHGCv3AfWX",
+      "authorship_tag": "ABX9TyP/dNiZG4aE8aX5rAWqX91g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2321,7 +2321,7 @@
         "id": "P_kQJUrGg6J3",
         "outputId": "2142304f-9604-4cf9-f884-f1e688a5f624"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2374,7 +2374,7 @@
         "id": "AyYLRkmcvdwn",
         "outputId": "e082d4c9-77e0-4c7f-84e3-43dcc86461db"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2423,7 +2423,7 @@
         "id": "evrgiK2hxmI-",
         "outputId": "7bb36071-49ae-4abb-ca5f-e8024e74e03d"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2468,7 +2468,7 @@
         "id": "3kSQkhorcGEk",
         "outputId": "bbd82b5c-fa0e-4c6b-c38e-f9c16e642449"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2531,7 +2531,7 @@
         "id": "IeQlb4bfef3H",
         "outputId": "6877ef9f-9cf7-412f-d54a-d284a6d8eec2"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2585,7 +2585,7 @@
         "id": "e_nQvNgZe5eg",
         "outputId": "576fe4b8-1bbe-4f6f-b3bc-958a4c5ca41b"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2642,7 +2642,7 @@
         "id": "bxB5NPnMiUJ8",
         "outputId": "96c0c83d-a907-47c0-e0cc-2fb698be8efa"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2693,7 +2693,7 @@
         "id": "Z7JC9D8J_ZP5",
         "outputId": "f48c837e-91d7-43a9-ea7a-b3fe64047c73"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -2757,7 +2757,7 @@
         "id": "aW97QV5oHucf",
         "outputId": "7182e2f7-d614-4a2f-f645-67d2eccd785c"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2835,7 +2835,7 @@
         "id": "cfhBzEasJzRN",
         "outputId": "891f8002-48d4-42d6-fadd-0e801a4132a9"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2891,7 +2891,7 @@
         "id": "5Ju0j8LgMuMG",
         "outputId": "bc6ad91d-e1b6-471e-fdb5-3ff52316bff9"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2935,7 +2935,7 @@
         "id": "xPRL47xQOu_c",
         "outputId": "a951e784-e464-4c55-c096-e93e783c4225"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2962,6 +2962,66 @@
       "metadata": {
         "id": "Wzdfi2-qPZdW"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " ### Note: Jenis jenis kurung ###\n",
+        " **jenis tanda kurung** di Python, dan fungsinya berbeda-beda:\n",
+        "\n",
+        "1. **`[]` (square brackets / kurung siku)**\n",
+        "\n",
+        "   * Digunakan untuk **mengakses elemen** di **list, array, atau DataFrame/Series**.\n",
+        "   * Contoh:\n",
+        "\n",
+        "     ```python\n",
+        "     my_list = [10, 20, 30]\n",
+        "     print(my_list[1])  # hasil: 20\n",
+        "\n",
+        "     df[\"created_date\"]  # ambil kolom 'created_date' dari DataFrame\n",
+        "     ```\n",
+        "   * Jadi `data[\"created_date\"]` artinya **ambil kolom “created_date” dari `data`**.\n",
+        "\n",
+        "2. **`()` (parentheses / kurung bulat)**\n",
+        "\n",
+        "   * Digunakan untuk **memanggil fungsi** atau **menentukan urutan operasi matematika**.\n",
+        "   * Contoh:\n",
+        "\n",
+        "     ```python\n",
+        "     len([1,2,3])       # panggil fungsi len() untuk menghitung panjang list\n",
+        "     (2 + 3) * 4        # urutan operasi matematika\n",
+        "     ```\n",
+        "\n",
+        "3. **`{}` (curly braces / kurung kurawal)**\n",
+        "\n",
+        "   * Digunakan untuk **membuat set** atau **dictionary**.\n",
+        "   * Contoh:\n",
+        "\n",
+        "     ```python\n",
+        "     my_set = {1, 2, 3}               # set\n",
+        "     my_dict = {\"a\": 1, \"b\": 2}       # dictionary\n",
+        "     my_dict[\"a\"]                     # ambil nilai 1 dari key \"a\"\n",
+        "     ```\n",
+        "\n",
+        "✅ Jadi kenapa `data[\"created_date\"]` pakai `[]`:\n",
+        "\n",
+        "* Karena kita **mengakses elemen kolom** dari DataFrame, bukan memanggil fungsi (yang pakai `()`) atau membuat dictionary/set (yang pakai `{}`).\n",
+        "\n",
+        "Kalau mau, aku bisa buat **tabel ringkas semua kurung di Python dan fungsinya** biar gampang diingat.\n",
+        "Mau aku buatkan?\n"
+      ],
+      "metadata": {
+        "id": "BZmabAaw67KG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "eN7Z7ukV6_b3"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
