menambahkan kegunakan kurung ()

--- a/belajarpython.ipynb
+++ b/belajarpython.ipynb
@@ -8,7 +8,7 @@
         "mgiAbsTifVCk"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP/dNiZG4aE8aX5rAWqX91g",
+      "authorship_tag": "ABX9TyOinMaysArIUHam8CQId+0m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2990,6 +2990,8 @@
         "     ```python\n",
         "     len([1,2,3])       # panggil fungsi len() untuk menghitung panjang list\n",
         "     (2 + 3) * 4        # urutan operasi matematika\n",
+        "     (df['category_label'] == 'IT Jobs') & (df['contract_time'] == 'full_time') #urutan operasi matematika, dikerjakan dulu yand d dalam kurung ()\n",
+        "\n",
         "     ```\n",
         "\n",
         "3. **`{}` (curly braces / kurung kurawal)**\n",
